# esp32-rtk-gateway

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  buildflash.sh  partitions.csv  partitions_16mb.csv  partitions_4mb.csv  partitions_8mb.csv  sdkconfig
.github/: FUNDING.yml
.github/workflows/: build-firmware-profiles.yml
components/board_config/: CMakeLists.txt
components/duty_cycle/: CMakeLists.txt
components/lora_radio/: CMakeLists.txt  Kconfig.projbuild
components/lora_transport/: CMakeLists.txt
components/rover_lora_pipeline/: CMakeLists.txt
components/rtcm_filter/: CMakeLists.txt
components/rtk_lora_pipeline/: CMakeLists.txt
components/sx126x_driver/: CMakeLists.txt
configs/profiles/: generic_esp32_eth-base-eu868-ublox-none-lan8720-4mb-none.json  mammotion_esp32s3-base-eu868-unicore-sx126x-none-16mb-8mb.json  mammotion_esp32s3_rtk-base-eu868-unicore-llcc68-none-8mb-none.json  waveshare_esp32s3_eth-base-eu868-ublox-sx1262-w5500-16mb-8mb.json  waveshare_esp32s3_eth-base-eu868-ublox-sx126x-w5500-16mb-8mb.json  waveshare_esp32s3_eth-base-eu868-unicore-sx1262-w5500-16mb-8mb.json  waveshare_esp32s3_eth-rover-eu868-unicore-sx1262-none-16mb-8mb.json  waveshare_esp32s3_eth-rover-eu868-unicore-sx126x-none-16mb-8mb.json
configs/templates/: sdkconfig.board_generic_esp32_eth.defaults  sdkconfig.board_mammotion_esp32s3.defaults  sdkconfig.board_mammotion_esp32s3_rtk.defaults  sdkconfig.board_waveshare_esp32s3_eth.defaults  sdkconfig.common.defaults  sdkconfig.esp32.defaults  sdkconfig.esp32s3.defaults  sdkconfig.eth_lan8720.defaults  sdkconfig.eth_none.defaults  sdkconfig.eth_w5500.defaults  sdkconfig.gnss_nmea.defaults  sdkconfig.gnss_septentrio.defaults  sdkconfig.gnss_ublox.defaults  sdkconfig.gnss_unicore.defaults  sdkconfig.lora_driver_none.defaults  sdkconfig.lora_driver_sx126x.defaults  sdkconfig.lora_llcc68.defaults  sdkconfig.lora_none.defaults  sdkconfig.lora_sx1262.defaults  sdkconfig.lora_sx1268.defaults  sdkconfig.psram_4mb.defaults  sdkconfig.psram_8mb.defaults  sdkconfig.psram_none.defaults  sdkconfig.region_as923.defaults  sdkconfig.region_au915.defaults  sdkconfig.region_custom.defaults  sdkconfig.region_eu868.defaults  sdkconfig.region_us915.defaults  sdkconfig.role_base.defaults  sdkconfig.role_dual_debug.defaults  sdkconfig.role_rover.defaults
docs/: flasher.html  webui_audit.md
docs/manifests/: waveshare_esp32s3_eth-base-eu868-ublox-sx1262-w5500-16mb-8mb.json  waveshare_esp32s3_eth-base-eu868-ublox-sx126x-16mb-8mb.json  waveshare_esp32s3_eth-base-eu868-ublox-sx126x-w5500-16mb-8mb.json  waveshare_esp32s3_eth-base-eu868-unicore-none-w5500-16mb-8mb.json  waveshare_esp32s3_eth-base-eu868-unicore-sx1262-w5500-16mb-8mb.json  (+1 more)
main/: CMakeLists.txt  Kconfig.projbuild  capabilities.c  captive_portal.c  config.c  core_dump.c  idf_component.yml  log.c  main.c  memory_policy.c  network.c  network_ethernet.c  network_state.c  ntrip_runtime.c  ntrip_slots.c  receiver.c  retry.c  status_led.c  stream_stats.c  uart.c  util.c  web_server.c  wifi.c
main/config/: board_caps.h  board_config.h
main/config/boards/: board_generic_esp32.h  board_generic_esp32_eth.h  board_generic_esp32c3.h  board_generic_esp32c6.h  board_mammotion_esp32s3.h  board_mammotion_esp32s3_rtk.h  board_waveshare_esp32s3_eth.h
main/config/targets/: target_esp32.h  target_esp32c3.h  target_esp32c6.h  target_esp32s3.h
main/ethernet/: eth_lan8720.c  eth_lan8720.h  eth_w5500.c  eth_w5500.h
main/include/: capabilities.h  captive_portal.h  config.h  core_dump.h  esp_ota_ops.h  memory_policy.h  network.h  network_ethernet.h  network_state.h  ntrip_runtime.h  ntrip_slots.h  receiver.h  receiver_types.h  retry.h  stream_stats.h  uart.h  wifi.h
main/include/interface/: ntrip.h
main/interface/: ntrip_caster.c  ntrip_client.c  ntrip_server.c  ntrip_server_2.c  ntrip_util.c  socket_client.c  socket_server.c
main/protocol/: nmea.c
scripts/: build_profile.sh  check_profile_build_inputs.sh  check_webui_assets.sh
trash/: setup.html
www/: advanced.html  app-lite.css  app-lite.js  config.html  dashboard.html  index.html  log.html  setup.html
www/c/: advanced.js  api.js  (+8 more)
(+25 files in other folders)
