idf_component_register(
    SRCS
        "../../external/sx126x_driver/src/sx126x.c"
        "../../external/sx126x_driver/src/sx126x_bpsk.c"
        "../../external/sx126x_driver/src/sx126x_lr_fhss.c"
        "../../external/sx126x_driver/src/sx126x_driver_version.c"

    INCLUDE_DIRS
        "../../external/sx126x_driver/src"
)
